doc: thesis ready? ready!

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -116,11 +116,13 @@ Bounding Volume Hierarchies (BVHs) gehören zu den wichtigsten Beschleunigungsda
 
 Diese Arbeit untersucht Top-Down konstruierte BVH in statischen dreidimensionalen Szenen für Verzweigungsgrade $k \in \{2, 4 ,8 ,16\}$. Dies geschieht unter Berücksichtigung von drei Splitting-Verfahren (Median, Surface Area Heuristic und Binned Surface Area Heuristic), sowie zwei Methoden zur Erzeugung von Wide BVHs (k-way splitting und binary BVH collapse). Dabei steht die Traversal-Time als primäres und die Construction-Time als sekundäres Qualitätsmerkmal im Fokus. Zudem wird durch eine Kombination der beiden Qualitätsmetriken ein Szenario mit dynamischer Szene modelliert.
 
-Für alle untersuchten statischen Szenen zeigt $k = 4$ eine statistisch signifikante Verbesserung gegenüber der vergleichbaren binären Variante. Dabei liegt der Traversal-Speedup-Faktor im Mittel zwischen 1,03 und 1,08, wobei der Effekt für größere Szenen abzuflachen scheint. Für höhere Verzweigungsgrade ($k = 8$ und $k = 16$) liegt der Speedup-faktor deutlich und statistisch signifikant unter 1. 
-Es konnte zwischen k-way splitting und der collapse Methode keine signifikanten Unterschiede in der Traversal-Time gefunden werden.
-Auch im dynamischen Modell scheint der durch $k = 4$ entstehende Vorteil mit steigender Szenengröße abzunehmen und kann bei den größeren untersuchten Szenen, unabhängig vom Konstruktionsverfahren, sogar ausbleiben bzw. zum Nachteil werden. 
-Insgesamt deuten die Ergebnisse darauf hin, dass bei serieller Berechnung auf der CPU ein Verzweigungsgrad von $k = 4$ einen kleinen aber klaren Gewinn liefert. Größere Verzweigungsgrade sind nicht zu empfehlen. Das Verhalten in größeren Szenen bietet Raum für zukünftige Forschung.
+Für statische Szenen zeigt $k = 4$ gegenüber der binären Referenz keinen einheitlichen Trend for alle Kombinationen an Parametern. Abhängig von Splitting-Verfahren und Wide BVH Erzeugungsmethode liegen die dazugehörigen Speedups zwischen $0,932$ und $1,234$. Insbesondere der Median-Split in Kombination mit collapsing erzeugt schlechtere Traversal-times gegenüber $k = 2$, während SAH und BSAH häufiger Verbesserungen aufzeigen. Für größere Verzweigungsgrade verschlechtern sich die Traversal-Times über alle Konfigurationen mit Speedups zwischen $0,529$ und $0,866$ für $k = 8$, sowie nochmal dramatisch schlechter für $k = 16$ mit Speedups zwischen $0,077$ und $0,666$. Dabei ist die Streuung dieser Werte stark abhängig von der gewählten Wide BVH Erzeugungsmethode.
 
+Im direkten Vergleich zwischen k-way splitting und collapsing zeigt sich, dass die Verfahren keine gleichwertigen Wide BVH erzeugen. Während der Unetrschied für $k = 4$ noch stark abhängig vom gewählten Splitting-Algorithmus, mit Speedups nahe $1$, ist, ist k-way splitting für $k \ge 8$ in allen untersuchten Szenen für alle Splitting-Algorithmen schneller. Für $k = 16$ liegt der Vorteil teils sogar bei einer ungefähr 2,5-fachen bis 6-fachen besseren Geschwindigkeit gegenüber der Nutzung von collapsing.     
+
+Für das dynamische Modell ergibt sich ein differenziertes Bild. Während $k \ge 8$ für alle Fälle schlechtere Ergebnisse als die binäre Referenz liefert, kann k-way splitting in ausgewählter Konfiguration, BSAH in großen Szenen, durch immer kleinere Construction-Times trotz schlechterer Traversal-Times gegenüber $k =  2$ überwiegen.
+
+Zusammenfassend lässt sich sagen, dass Wide BVH im Kontext seriellr Berechnung auf der CPU nur unter spezifischen Parametern einen praktischen Nutzen liefern können. Je nach Splitting-Algorithmus und erzeugungsmethode kann $k = $ einen kleinen aber signifikanten Vorteil liefern. Dagegen sind allgemein $k \ge 8$ nicht zu empfehlen und sollten vor allem bei Erzeugung durch collapsing vermieden werden. Die Aussagekraft dieser ergebnisse ist durch die kleine Stichprobe an relativ kleinen Szenen, sowie die Beschränkung auf die Berechnung von Primärstrahlen begrenzt. Dadurch bietet sich weitere Forschung unter Berücksichtigung einer breiteren Szenen- und Ray-Verteilung an.
 
 \tableofcontents
 
