doc: thesis fix typos

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -118,11 +118,11 @@ Diese Arbeit untersucht Top-Down konstruierte BVH in statischen dreidimensionale
 
 Für statische Szenen zeigt $k = 4$ gegenüber der binären Referenz keinen einheitlichen Trend for alle Kombinationen an Parametern. Abhängig von Splitting-Verfahren und Wide BVH Erzeugungsmethode liegen die dazugehörigen Speedups zwischen $0,932$ und $1,234$. Insbesondere der Median-Split in Kombination mit collapsing erzeugt schlechtere Traversal-times gegenüber $k = 2$, während SAH und BSAH häufiger Verbesserungen aufzeigen. Für größere Verzweigungsgrade verschlechtern sich die Traversal-Times über alle Konfigurationen mit Speedups zwischen $0,529$ und $0,866$ für $k = 8$, sowie nochmal dramatisch schlechter für $k = 16$ mit Speedups zwischen $0,077$ und $0,666$. Dabei ist die Streuung dieser Werte stark abhängig von der gewählten Wide BVH Erzeugungsmethode.
 
-Im direkten Vergleich zwischen k-way splitting und collapsing zeigt sich, dass die Verfahren keine gleichwertigen Wide BVH erzeugen. Während der Unetrschied für $k = 4$ noch stark abhängig vom gewählten Splitting-Algorithmus, mit Speedups nahe $1$, ist, ist k-way splitting für $k \ge 8$ in allen untersuchten Szenen für alle Splitting-Algorithmen schneller. Für $k = 16$ liegt der Vorteil teils sogar bei einer ungefähr 2,5-fachen bis 6-fachen besseren Geschwindigkeit gegenüber der Nutzung von collapsing.     
+Im direkten Vergleich zwischen k-way splitting und collapsing zeigt sich, dass die Verfahren keine gleichwertigen Wide BVH erzeugen. Während der Unterschied für $k = 4$ noch stark abhängig vom gewählten Splitting-Algorithmus, mit Speedups nahe $1$, ist, ist k-way splitting für $k \ge 8$ in allen untersuchten Szenen für alle Splitting-Algorithmen schneller. Für $k = 16$ liegt der Vorteil teils sogar bei einer ungefähr 2,5-fachen bis 6-fachen besseren Geschwindigkeit gegenüber der Nutzung von collapsing.     
 
 Für das dynamische Modell ergibt sich ein differenziertes Bild. Während $k \ge 8$ für alle Fälle schlechtere Ergebnisse als die binäre Referenz liefert, kann k-way splitting in ausgewählter Konfiguration, BSAH in großen Szenen, durch immer kleinere Construction-Times trotz schlechterer Traversal-Times gegenüber $k =  2$ überwiegen.
 
-Zusammenfassend lässt sich sagen, dass Wide BVH im Kontext seriellr Berechnung auf der CPU nur unter spezifischen Parametern einen praktischen Nutzen liefern können. Je nach Splitting-Algorithmus und erzeugungsmethode kann $k = $ einen kleinen aber signifikanten Vorteil liefern. Dagegen sind allgemein $k \ge 8$ nicht zu empfehlen und sollten vor allem bei Erzeugung durch collapsing vermieden werden. Die Aussagekraft dieser ergebnisse ist durch die kleine Stichprobe an relativ kleinen Szenen, sowie die Beschränkung auf die Berechnung von Primärstrahlen begrenzt. Dadurch bietet sich weitere Forschung unter Berücksichtigung einer breiteren Szenen- und Ray-Verteilung an.
+Zusammenfassend lässt sich sagen, dass Wide BVH im Kontext serieller Berechnung auf der CPU nur unter spezifischen Parametern einen praktischen Nutzen liefern können. Je nach Splitting-Algorithmus und erzeugungsmethode kann $k = 4$ einen kleinen aber signifikanten Vorteil liefern. Dagegen sind allgemein $k \ge 8$ nicht zu empfehlen und sollten vor allem bei Erzeugung durch collapsing vermieden werden. Die Aussagekraft dieser Ergebnisse ist durch die kleine Stichprobe an relativ kleinen Szenen, sowie die Beschränkung auf die Berechnung von Primärstrahlen begrenzt. Dadurch bietet sich weitere Forschung unter Berücksichtigung einer breiteren Szenen- und Ray-Verteilung an.
 
 \tableofcontents
 
@@ -151,7 +151,7 @@ Die sinnvolle Konstruktion einer BVH ist ein Kernpunkt dieser Arbeit.
 
 Es existieren Konstruktionsverfahren verschiedener Komplexitätsklassen, deren Endprodukt sich auf die Traversal Time (Renderzeit) auswirkt. Von der Construction Time (Konstruktionszeit) lässt sich die Nutzbarkeit einer BVH in dynamischen Szenen, also Szenen mit bewegten Objekten, ableiten. Die Traversal Time ist das Hauptqualitätsmerkmal für eine BVH, da sich durch niedrigere Zeiten höhere Auflösungen und Bildwiederholraten, sowohl in statischen wie auch dynamischen Szenen, realisieren lassen.
 Ein genutzter Vorteil der Baumstruktur ist, dass sich sowohl Construction (Konstruktion) als auch Traversal (Durchsuchung) auf GPUs parallelisieren lassen. Dabei spielt auch die Konstruktion mit höheren Verzweigungsgraden eine Rolle, wobei man auch dies durch unterschiedliche Konstruktionsverfahren erreichen kann, wie dem \emph{k-way splitting} oder durch \emph{collapse} (Kollabierung) der Hierarchie. Diese Art von BVH wird Wide BVH (Weite BVH) oder auch BVHk genannt. 
-Ziel der Arbeit ist die Analyse verschiedener Konstruktionsverfahren von Wide BVHs mit Hinblick auf Einsparung in Traversal- aber auch Construction-Zeit in statischen Szenen. Diese Art von BVH ist bereits in der parallelisierten Berechnung mit GPUs weiter verbreitet, hier wird allerdings eine serielle Berechnung auf der CPU untersucht und damit die algorithmischen Vor- und Nachteile von Wide BVH. Dabei sollen die Ergebnisse abhängig von dem verwendeten Konstruktionsalgorithmus, dem Verzweigungsgrad der Hierarchie und der Primitive-Anzahl der Szene beleuchtete werden. 
+Ziel der Arbeit ist die Analyse verschiedener Konstruktionsverfahren von Wide BVHs mit Hinblick auf Einsparung in Traversal- aber auch Construction-Zeit in statischen Szenen. Diese Art von BVH ist bereits in der parallelisierten Berechnung mit GPUs weiter verbreitet, hier wird allerdings eine serielle Berechnung auf der CPU untersucht und damit die algorithmischen Vor- und Nachteile von Wide BVH. Dabei sollen die Ergebnisse abhängig von dem verwendeten Konstruktionsalgorithmus, dem Verzweigungsgrad der Hierarchie und der Primitive-Anzahl der Szene beleuchtet werden. 
 Dabei haben sich drei Problemfragen ergeben, die den Umfang dieser Arbeit definieren:
 \begin{itemize} 
 \item
@@ -159,7 +159,7 @@ Wie verändert sich die Traversal-Time bei Top-Down-Konstruierten Wide BVHs für
 \item
 Unterscheidet sich die Traversal-Time der BVHs zwischen direktem k-way splitting und collapse einer binären BVH abhängig von der gewählten statischen Szene?
 \item
-Wie verändern sich Construction- und Traversal-Time als kombinierte Qualitätsmetrik für die modellierung dynamischer Szenen mit Bezug auf das gewählte Splitting-Verfahren jeweils über $k \in \{2, 4, 8, 16\}$?
+Wie verändern sich Construction- und Traversal-Time als kombinierte Qualitätsmetrik für die Modellierung dynamischer Szenen mit Bezug auf das gewählte Splitting-Verfahren jeweils über $k \in \{2, 4, 8, 16\}$?
 \end{itemize}
 
 Die Analyse soll dabei auf einer selbstimplementierten Testbench stattfinden und anschließend mit unabhängigen T-Tests ausgewertet werden. Mittelwerte, sowie Konfidenzintervalle dienen zur späteren Diskussion der Ergebnisse.
@@ -194,7 +194,7 @@ Zuerst wird in die benötigen Grundlagen und Terminologie des Raytracings eingef
 
 \section{Modell}
 
-Für das weitere Vorgehen werden unter Primitives immer Polygone, also Dreiecke, verstanden. Polygone werden durch ihre drei Eckpunkte definiert, die jeweils durch dreidimensionale Vektoren beschrieben werden. Zudem wird für die Vereinfachung von Berechnungen der Mittelpunkt des Polygons bestimmt, \emph{Centroid} genannt. Eine zusammenhängende Struktur aus Polygonen wird als \emph{Mesh} verstanden. 
+Für das weitere Vorgehen werden unter Primitives immer Polygone, also Dreiecke, verstanden, da die verwendeten Szenen in diesem Format vorliegen. Polygone werden durch ihre drei Eckpunkte definiert, die jeweils durch dreidimensionale Vektoren beschrieben werden. Zudem wird für die Vereinfachung von Berechnungen der Mittelpunkt des Polygons bestimmt, \emph{Centroid} genannt. Eine zusammenhängende Struktur aus Polygonen wird als \emph{Mesh} verstanden. 
 
 Wenn sich im Traversal-Schritt die Frage stellt, ob ein Ray ein Primitive schneidet, stellt sich eigentlich die Frage, ob ein bestimmtes Primitive das erste ist, was der untersuchte Ray schneidet. Man spricht hier von \emph{closest hit test}~\cite{https://doi.org/10.1111/cgf.142662}.
 
@@ -279,7 +279,7 @@ Die Binned Surface Area Heuristic ist eine Abwandlung, der SAH. Sie verwendet da
 Verglichen werden BVH in verschieden großen Szenen, die sich in Konstruktionsalgorithmus und Verzweigungsgrad unterscheiden. Die Untersuchten Algorithmen sind der \emph{Median Split, Surface Area Heuristic Split} und \emph{Binned Surface Area Heuristic Split}. Als Referenz wird in jedem Fall ein Testdurchlauf mit der Konsteuktion einer BVH mit Verzweigungsgrad $k=2$ durchgeführt. Zudem werden $k=4$, $k=8$ und $k=16$ untersucht, wobei jeweils eine Variante in der die binäre BVH collapsed wird um die höheren Grade zu erreichen und eine Variante mit direktem k-way splitting existiert. Jeder erzeugt Frame hat eine Auflösung von $500 * 500$ Pixeln, was einer Menge von $250.000$ Primärstrahlen pro berechneten Bild bzw. Traversalschritt entspricht.
 Innerhalb der Szenen wird eine einfache Kamerafahrt in $36$ Frames unterteilt. Bei der Kamerafahrt handelt es sich um eine einfachen Pfad um den Ursprung der Szene, bei dem dieser stets im Mittelpunkt steht. In den meisten Szenen rotiert damit die Kamera um ein Objekt. Die Frames unterscheiden sich damit lediglich in Kameraposition und -Ausrichtung. 
 
-Dabei werden als Hauptmetriken die Construction-Time und die Traversal-Time erfasst. 
+Dabei werden als Hauptmetriken die Construction-Time und die Traversal-Time pro berechneten Frame erfasst. 
 Insgesamt werden pro Testdurchlauf $10$ Datenpunkte für die Construction-Time und dann pro Frame jeweils die Traversal-Time gesammelt. 
 Alle Tests wurden um Messfehler auszuschließen $10$ mal wiederholt.
 Damit kommt man für jede Permutation von Algorithmus, Verzweigungsgrad, Wide BVH Variante und Modell auf $84$ verschiedene Testruns mit je $46$ Datenpunkte und $10$ Wiederholungen. Also gesamtheitlich auf \emph{$38.640$ Datenpunkte}.
@@ -651,7 +651,7 @@ Es wird wieder mit einem Stack gearbeitet, angefangen bei der Root-Node. Für je
         while nodes is not empty do
             node := pop(nodes)
 
-            if node.children is empty do
+            if node.children is empty then
                 continue
             end if
 
@@ -785,7 +785,7 @@ Insgesamt schließen die Konfidenzintervalle aus der Tabelle~\ref{tab:dynamic} d
 \section{Interpretation: Einfluss des Verzweigungsgrades auf die Traversal}
 Vorher wurde gezeigt, dass es teilweise Einsparung in der Traversal-Time für $k = 4$ gegenüber der binären Referenz gab, während es für $k \in \{8, 16\}$ in jedem untersuchten Fall starke Einbußen in der Performance gab.
 
-Für $k = 4$ schwanken die Werte bei Nutzung des k-way splittings und näheren sich für die größeren untersuchten Modelle immer mehr in Richtung $1$ aneinander an. Unter Nutzung des Collapsing-Verfahrens sind die Speedups deutlich wertstabiler. Hier lassen sich klare Negativtrends für den Median-Split und Positivtrends für SAH und BSAH ablesen. Über die verschiedenen $k$ folgen allerdings alle Splitting-Algorithmen dem gleichen Trend.
+Für $k = 4$ liegen die Werte bei Nutzung des k-way splittings für Median-Split sowie SAH sowohl über als auch unter $1$ und näheren sich für die größeren untersuchten Modelle immer mehr in Richtung $1$ an. Unter Nutzung des Collapsing-Verfahrens sind die Speedups deutlich wertstabiler. Hier lassen sich klare Negativtrends für den Median-Split und Positivtrends für SAH und BSAH ablesen. Über die verschiedenen $k$ folgen allerdings alle Splitting-Algorithmen dem gleichen Trend.
 Eine plausible Erklärung für die, bis auf den Median-Split, konstante Verbessserung der Ergebnisse, im Fall $k = 4$ mit collapsing, ist ein Abwägung zwischen der Anzahl an inneren Knoten und der Anzahl an auszuführenden AABB-Tests bzw. Kollisionsüberprüfungen zwischen Primärstrahl und Bounding Boxen. Bei höheren Verzweigungsgraden müssen nämlich pro Node mehr Kinder überprüft werden, während es insgesamt aber auch weniger innere Nodes gibt, die überhaupt überprüft werden können. Es lässt sich interpretieren, dass für $k = 4$ die Menge an weniger besuchten Nodes die größere Menge an AABB-Tests noch in den meisten Fällen überkompensiert, während dies ab $k = 8$ nicht mehr der Fall ist. Zur Veranschaulichung dient Abbildung~\ref{fig:aabb-example-collaping} in der man Beispielhaft die Menge an AABB-Tests und Triangle-Tests, bzw. Primärstrahl und Polygon Kollisionen, ablesen kann. 
 \begin{figure}[h]
     \centering
@@ -805,7 +805,7 @@ Zudem ist wichtig, dass der für $k = 4$ beobachtete Effekt zwar statistisch sig
 \section{Interpretation: K-way splitting gegen collapsing}
 Im Rahmen der Ergebnissvorstellung wurde gezeigt, dass die Messergebnisse für $k = 4$ stark abhängig von der gewählten Szene und dem gewählten Splitting-Algorithmus ausfallen. Die konstante Überlegenheit einer Wide BVH Erzeugungsmethode über alle Kombinationen lässt sich hier nicht erkennen. Interessanter ist das verhalten für steigende $k$. Für untersuchte $k \ge 8$ dominiert das k-way splitting ausnahmslos mit Speedups bis zu einer 6-fachen Geschwindigkeit.
 
-Die naheliegendste Erklärung ist auch hier wieder die die Menge an ausgeführten AABB- und Triange-Tests. Es zeigt sich, dass bei Nutzung vonc collapsing zwar konstant weniger Triangle- bzw. Primitive-Tests durchgeführt werden, es allerdings bei $k = 8$ eine Art Trendumkehrung gibt. Die Menge an eingesparten positiven AABB-Tests reicht nicht mehr aus um die Menge an negativen AABB-Tests und Triangle-Tests zu amortisieren. Beispielhaft lässt sich dies an Abbildung~\ref{fig:aabb-example-mixed} ablesen. Die Nutzung von k-way splitting schein die Menge von negativen AABB-Tests auf kosten von mehr Triangle-Tests konstant niedriger zu halten, während die Menge an negativen AABB-Test fürs collapsing nahezu explodiert. Dies lässt die Vermutung zu, dass collaping deutlich mehr überschneidene AABBs auf hohen Ebenen erzeugt, während es für k-way splitting eher Überschneidungen auf tieferen Ebenen gibt. Da es sehr viel mehr innere Knoten als Primitives gibt, fällt der Effekt deshalb so ungleichmäßig aus.  
+Die naheliegendste Erklärung ist auch hier wieder die die Menge an ausgeführten AABB- und Triange-Tests. Es zeigt sich, dass bei Nutzung vonc collapsing zwar konstant weniger Triangle- bzw. Primitive-Tests durchgeführt werden, es allerdings bei $k = 8$ eine Art Trendumkehrung gibt. Die Menge an eingesparten positiven AABB-Tests reicht nicht mehr aus um die Menge an negativen AABB-Tests und Triangle-Tests zu amortisieren. Beispielhaft lässt sich dies an Abbildung~\ref{fig:aabb-example-mixed} ablesen. Die Nutzung von k-way splitting schein die Menge von negativen AABB-Tests auf kosten von mehr Triangle-Tests konstant niedriger zu halten, während die Menge an negativen AABB-Test fürs collapsing nahezu explodiert. Dies lässt die Vermutung zu, dass collaping deutlich mehr überschneidene AABBs auf hohen Ebenen erzeugt, während es für k-way splitting eher Überschneidungen auf tieferen Ebenen gibt. Da es sehr viel mehr innere Knoten als Primitives gibt, fällt der Effekt deshalb so ungleichmäßig aus. Für $k = 16$ ist der Baum so breit, dass der Effekt auf die Spitze getrieben wird.
 \begin{figure}[h]
     \centering
     \includegraphics[width=\textwidth]{results/rq2/hit_ray_analysis_mixed.png}
@@ -840,7 +840,7 @@ Alle besprochenen Ergebnisse gelten innerhalb der folgenden Annahmen:
     \item Ausschließlich Top-Down-Konstruktion von BVH
     \item Keine echten dynamischen Verfahren, wie z.B. Refitting oder Rebuilding
 \end{itemize}
-Darüber hinaus sorgt die Menge an lediglich vier untersuchten Szenen, sowie ihre ähnliche Beschaffenheit für eine begrenzte Aussagekraft. Die Verteilung der untersuchten Rays ergibt sich aus der vorgegebenen Kamerafahrt um den Ursprung der Szene und nicht aus der Untersuchung von Sekundärstrahlen durch z.B. die Berechnung von Schatten. Metriken wie AABB- und Triangle-Tests wurde nur für ausgewählte Beispiele erhoben und bieten keine Grundlage für eine ausgiebige Analyse.
+Darüber hinaus sorgt die Menge an lediglich vier untersuchten Szenen, sowie ihre ähnliche Beschaffenheit für eine begrenzte Aussagekraft. Die Verteilung der untersuchten Rays ergibt sich aus der vorgegebenen Kamerafahrt um den Ursprung der Szene und nicht aus der Untersuchung von Sekundärstrahlen durch z.B. die Berechnung von Schatten. Metriken wie AABB- und Triangle-Tests wurde nur für ausgewählte Beispiele erhoben und bieten keine Grundlage für eine ausgiebige Analyse. Für klare Belege der im Diskussionsteil besprochenen Thesen sind weitere messungen und statistische Analyse von nöten. 
 
 \section{Ausblick}
 Fortlaufend bietet es sich an die Stichprobe an Szenen zu erweitern. Mehr und vor allem größere Szenen, sowie komplexere Szenen mit Kameraursprung innerhalb der Szene bieten Forschungsspielraum. Zudem wäre eine Untersuchung, die nicht nur Primärstrahlen überprüft, sondern auch Shadingeffekte, durch z.B. \emph{Ambient Occlusion}, denkbar. Auch wäre eine quantitative Untersuchung der AABB- und Triangle-Tests sinnvoll, um die hier genannten Erklärungen zu untermauern. zudem wäre eine Untersuchung verschiedener Bin-Größen für BSAH von Interesse, sowie unterschiedliche Abbruchkriterien bei der Konstruktion. 
@@ -849,16 +849,17 @@ Fortlaufend bietet es sich an die Stichprobe an Szenen zu erweitern. Mehr und vo
 \chapter{Fazit}
 Der Fokus dieser Arbeit war die analytische Bewertung der Qualität von Top-Down konstruierten Wide BVHs in statischen 3D Szenen aufbauend auf serieller Berechnungen. Dabei gab es das Ziel herauszufinden, ob Wide BVH alleinig auf struktureller bzw. algorithmischer Ebene einen Vorteil gegenüber binärer BVHs innehaben, auch wenn der Vorteil der parallelisierten Berechnung wegfällt.
 
-Im Rahmen der ersten Forschungsfrage zeigten die Messungen, dass $k = 4$ der einzig versuchte Verweuígungsgrad ist, der gegenüber $k = 2$ überhaupt potenzielle verbesserungen in der Traversal-Time aufweist. Allerdings sind diese Ergebnisse nicht universell anwendbar, da die Speedups von leichten einbußen bis hin zu klaren Gewinnen reichen, mit Mittelwerten zwischen $0,932$ und $1,234$, wobei die Ergebnisse zwischen Nutzung von k-way splitting und collapsing variieren. Dabei ist zu erwähnen, dass der Median Split in Kombination mit collapsing für $k = 4$ immer Speedups unter $1$ generiert, während die beiden Heuristiken überwiegend Verbesserungen gegenüber der Referenz aufweisen. Für $k \ge 8$ verschlechtert sich die Traversal-Time konsistent über alle untersuchten konfigurationen hinweg, was Wide BVh mit höheren Verzweigungsgraden insgesamt unattraktiv für die Verwendung in statischen Szenen bei serieller Berechnungen macht.
+Im Rahmen der ersten Forschungsfrage zeigten die Messungen, dass $k = 4$ der einzig versuchte Verzweigungsgrad ist, der gegenüber $k = 2$ überhaupt potenzielle verbesserungen in der Traversal-Time aufweist. Allerdings sind diese Ergebnisse nicht universell anwendbar, da die Speedups von leichten einbußen bis hin zu klaren Gewinnen reichen, mit Mittelwerten zwischen $0,932$ und $1,234$, wobei die Ergebnisse zwischen Nutzung von k-way splitting und collapsing variieren. Dabei ist zu erwähnen, dass der Median Split in Kombination mit collapsing für $k = 4$ immer Speedups unter $1$ generiert, während die beiden Heuristiken überwiegend Verbesserungen gegenüber der Referenz aufweisen. Für $k \ge 8$ verschlechtert sich die Traversal-Time konsistent über alle untersuchten konfigurationen hinweg, was Wide BVh mit höheren Verzweigungsgraden insgesamt unattraktiv für die Verwendung in statischen Szenen bei serieller Berechnungen macht.
 
 Die Untersuchung der zweiten Forschungsfrage hat ergeben, dass der Unterschied in der Traversal-Time der gegeben Wide BVH Erzeugungsmethode mit steigenden $k$ stark zunimmt. Insgesamt liegen die Speedups für $k = 4$ im Vergleich nahe bei $1$, sind allerdings abhängig vom gewählten Splitting-Algorithmus. Während k-way splitting durch den Median-Split begünstigt wird, gibt es in den untersuchten Fällen bei der Nutzung von  collapsing einen Vorteil durch BSAH. SAh liefert hier keinen klaren Trend. 
 Einen großen Unterschied gibt es für $k \ge 8$, wobei die BVH, die durch k-way splitting erzeugt wurden immer bessere Traversal-Times liefern. Für $k = 16$ spitzt sich dies auf einen bis zu 6-fachen Vorteil zusammen. 
 Damit ist die Empfehlung klar für größere $k$ auf eine durch k-way splitting konstruiierte BVH zu setzen.
 
-Für die Modellierung einer dynamischen Szene durch eine kombinierte Metrik aus \linebreak Construction- und Traversal-Time im Rahmen der letzten Forschungsfrage, zeigt sich ein stark differenziertes Bild. Für $k = 4$ liefert insgesamt im Durchschnitt die beste Verbesserung, wobei im Fall des collapsings der Median-Split ähnlich der ersten Forschungsfrage gegenüber der binären Referenz unterliegt. Für $k \ge 8$ unterliegt collapsing auch im dynamischen Modell konsequent. Für k-way splitting treten allerdings in einzelnen Konfigurationen, namentlich unetr der Verwendung von BSAH in größeren Szenen, deutliche verbesserungen gegenüber $k = 2$ auf. Dies lässt sich durch sinkende Construction-Times erklären, die im dynamsichen Modell die Gesamtzeit im Falle von k-way splitting stark beeinflussen.
-Damit kann man diese spezifische Konfiguration als klaren Gewinner im dynamischen Modell sehen. Währenddessen sollte auch hier collapsing wegen seiner schlechten Traversal-Times für große $k$ vermieden werden. 
+Für die Modellierung einer dynamischen Szene durch eine kombinierte Metrik aus \linebreak Construction- und Traversal-Time im Rahmen der letzten Forschungsfrage, zeigt sich ein stark differenziertes Bild. Für $k = 4$ liefert insgesamt im Durchschnitt die beste Verbesserung, wobei im Fall des collapsings der Median-Split ähnlich der ersten Forschungsfrage gegenüber der binären Referenz unterliegt. Für $k \ge 8$ unterliegt collapsing auch im dynamischen Modell konsequent. Für k-way splitting treten allerdings in einzelnen Konfigurationen, namentlich unter der Verwendung von BSAH in größeren Szenen, deutliche verbesserungen gegenüber $k = 2$ auf. Dies lässt sich durch sinkende Construction-Times erklären, die im dynamsichen Modell die Gesamtzeit im Falle von k-way splitting stark beeinflussen.
+Damit kann man diese spezifische Konfiguration als klaren Gewinner im dynamischen Modell sehen. Währenddessen sollte auch hier die Nutzung von collapsing wegen seiner schlechten Traversal-Times für große $k$ vermieden werden. 
 
-Zusammengefasst lässt sich sagen, 
+Zusammengefasst lässt sich sagen, dass für die serielle Traversal auf der CPU in statsiche nSzenen $k = 2$ nicht als robuster Standard abgelöst werden kann. Für Szenen oder Splitting-Algorithmen abhängige Algorithmen kann $k = 4$ sinnvoll sein. Allerdings sind $k \ge 8$ allgemein nicht zu empfehlen, genauso wie die Nutzung von collapsing in höheren Verzweigungsgrade. 
+
 Ein wichtiger nächster Schritt wäre die Messungen mit einer größeren Menge an Szenen mit höherer Polygonanzahl durchzuführen, um den Zusammenhang zwischen Szenengröße und Verzweigungsgrad näher zu ergründen. Gerade im dynamischen Modell unter Nutzung einer mit BSAH und k-way splitting erzeugten Wide BVH lassen sich noch viele mögliche Forschungsfragen klären.  
 Zudem wäre es interessant das Verhalten der BVHs unter der Nutzung von anderen Ray-Verteilungen durch beispielsweise Shader-Berechnung mit Hilfe von Sekundärstrahlen oder Ähnlichem zu beleuchten.
 
